# fully-autonomous-tuning

./: LICENSE  README.md  requirements.txt  setup.py
data_visualisation/: Qubit_map_data.ipynb  Tuning times and locations.ipynb  (+1 more)
qcodes-addons/: README.md  pyproject.toml  requirements.txt
qcodes-addons/notebooks/: Demo_EDSR_Rabi.ipynb  FinFET_template.ipynb  IPS_test.ipynb
qcodes-addons/qcodes_addons/: ANC350.py  AWG5204.py  AWG7122C.py  AWGhelp.py  BaselAWG5204.py  BaselAWG5208.py  Datahelp.py  E8257D.py  HDAWG.py  Lakeshore_331.py  Measurementhelp.py  NIDAQ.py  Oxford_Instruments_IPS120.py  Parameterhelp.py  SGS100A.py  SP1060_24.py  SP927v1.py  doNdAWG.py
qcodes-addons/qcodes_addons/ANC350Lib/: v3.py
signal_processing/bias_triangle_processing/: README.md  pyproject.toml  requirements.txt
signal_processing/bias_triangle_processing/bias_triangle_detection/: btriangle_location_detection.py  btriangle_properties.py  cotunnelling_detection.py  edsr.py  im_utils.py  qcodes_db_utils.py  readout_search_rectangle.py
signal_processing/bias_triangle_processing/bias_triangle_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
signal_processing/bias_triangle_processing/bias_triangle_detection/bayesian_optimization/: __init__.py  bayesian_optimizer.py  coarse_tuning_optimizer.py  setup.py
signal_processing/bias_triangle_processing/bias_triangle_detection/coord_change/: __init__.py  rectangle_region.py  tangent_to_surface.py
signal_processing/bias_triangle_processing/bias_triangle_detection/fastai_training/: create_psb_detection_labelled_data.py  create_switching_training_data.py  mlflow_callback.py
signal_processing/bias_triangle_processing/bias_triangle_detection/notebooks/: Bias_Triangle_Detection_example.ipynb  Bias_Triangle_Shape_Matching_demo.ipynb  Demo_for _Shape_Matching_with_user_input.ipynb  Detuning Line extraction.ipynb  FinFet_data_demo-updated.ipynb  FinFet_data_demo.ipynb  Nanowire_data_demo.ipynb  Processed_Nanowire_PSB_detection.ipynb  Refined_detuning_axes_extraction.ipynb  Triangle_Segment_Extraction.ipynb  Wideshot_location_detection_by_contour.ipynb  btriangle_location_detection_demo.ipynb  coarse_tuning_postmortem.py  coarse_tunning_data.py  danon_gap_exploration.py  label_cotunneling.py  post_processing_coarse_tuning.py  psb_nanowires.ipynb  rank_labelling.py  rank_vs_shape.py  run_model.py  run_switch_characterization.py  score_on_coulomb_peaks.py
(+71 files in other folders)
