# PEP-518 https://peps.python.org/pep-0518/
[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=65.5.1"]  # PEP 518 specifications

[project]
name = "qcodes_addons"
authors = [
    {name = "qcodes_addons"}
]
description = "qcodes_addons adds drivers and params to the qcodes repertoire."
requires-python = ">=3.7, <3.12"
keywords = [
    "PSB",
    "feature extraction",
]
license = {text = "Apache Software License (Apache 2.0)"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["readme", "version", "dependencies", "optional-dependencies"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["qcodes_addons*"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "qcodes_addons.__version__"}
dependencies = {file = "requirements.txt"}