# PEP-518 https://peps.python.org/pep-0518/
[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=65.5.1"]  # PEP 518 specifications

[project]
name = "bias_triangle_detection"
authors = [
    {name = "bias_triangle_detection"}
]
description = "bias_triangle_detection helps you detect bias triangles."
requires-python = ">=3.7, <3.12"
keywords = [
    "PSB",
    "feature extraction",
]
license = {text = "Apache Software License (Apache 2.0)"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["readme", "version", "dependencies", "optional-dependencies"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["bias_triangle_detection*"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "bias_triangle_detection.__version__"}
dependencies = {file = "requirements.txt"}
